# Remains-Editor

./: CMakeLists.txt  README.md
CanterCore/: CMakeLists.txt  CanterCore.h  TileViewer.cpp  TileViewer.h
CanterCore/data/rooms/: rooms_encl.xml
CanterCore/lib/glad/: glad.c  glad.h
data/: NameList.txt
data/rooms/: rooms_canter.xml  rooms_mane.xml  rooms_stable.xml
src/: CMakeLists.txt  CanterCore.cpp  Level.cpp  Level.h  Parser.cpp  Parser.h  Room.cpp  Room.h  Tile.cpp  Tile.h  TileViewer.cpp  TileViewer.h  main.cpp  main.h
